@@ -1,3 +1,5 @@
+- fixed weakness in mimer and browser if HEAD returns 500: internal server err
+- moved windows to openssl-0.9.7e 
 - new functrions in mimer and common modules to better support supereva
 - added supereva.lua to official plugins
 - fixed gmail.lua STAT issue (thanks to kzero22)
